--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">My Cart</string>
+    <string name="cart">Cart</string>
 </resources>
 
     <!--For indexing the name of navigation app-->
